@@ -1,3 +1,10 @@
+2005-09-29  Tor Lillqvist  <tml@novell.com>
+
+	* gtk/gtkmain.c (_gtk_get_localedir): The locale directory is
+	passed to bindtextdomain() which isn't UTF-8-aware, so convert to
+	system codepage using g_win32_locale_filename_from_utf8().
+	(#317457, Kazuki Iwamoto)
+
 2005-09-28  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkselection.c (_gtk_selection_request): Free mult_atoms 
